# py-adobe-captivate-prime-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
adobe_captivate_prime_api/: __init__.py  captivate_prime_api.py
adobe_captivate_prime_api/functions/: __init__.py  badges.py  catalogs.py  ecommerce.py  external_profiles.py  jobs.py  learning_objects.py  misc.py  skills.py  user_groups.py  users.py
