[project]
name = "py-adobe-captivate-prime-api"
version = "0.0.1"
authors = [
  { name="Emre Karabulut", email="karabulutemre@gmail.com" },
  { name="Bilge Dogan", email="naryaredhel@gmail.com" },
]
description = "A package to use Adobe Captivate Prime APIs (v2)"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/karabulute/py-adobe-captivate-prime-api"
"Bug Tracker" = "https://github.com/karabulute/py-adobe-captivate-prime-api/issues"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
line_length = 80
profile = "black"
py_version = 310

[tool.pylint]
init-hook = 'import sys; sys.path.append(".")'
py-version = [3, 10]
max-line-length = 80
good-names = [
    "main",
]
disable = [
    "import-outside-toplevel",
    "duplicate-code",
]
check-quote-consistency = true
ignore-imports = false
notes = [
    "TODO",
    "FIXME",
]
logging-modules = [
    "logging",
]
