[project]
name = "py-adobe-captivate-prime-api"
version = "0.0.1"
authors = [
    { name = "Emre Karabulut", email = "karabulutemre@gmail.com" },
    { name = "Bilge Dogan", email = "naryaredhel@gmail.com" },
]
description = "A package to use Adobe Captivate Prime APIs (v2)"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/karabulute/py-adobe-captivate-prime-api"
"Bug Tracker" = "https://github.com/karabulute/py-adobe-captivate-prime-api/issues"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
use_parentheses = true
combine_as_imports = true
py_version = 310
force_grid_wrap = 2

[tool.pylint]
init-hook = 'import sys; sys.path.append(".")'
py-version = [3, 10]
max-line-length = 88
good-names = [
    "e",
    "r",
    "main",
]
disable = [
    "import-outside-toplevel",
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]
check-quote-consistency = true
ignore-imports = false
notes = [
    "TODO",
    "FIXME",
]
logging-modules = [
    "logging",
]
logging-format-style = "old"
load-plugins = [
    "pylint.extensions.check_elif",
    "pylint.extensions.code_style",
    "pylint.extensions.comparetozero",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
    "pylint.extensions.empty_comment",
    "pylint.extensions.for_any_all",
]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
